Add privacy policy section to index.html
Added privacy policy details to the HTML document.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta name="tiktok-developers-site-verification" content="HvaLDLavLCQH7GHWgzZHHjmpENzkHuM0">
 </head>
 <body>
-    Vérification en cours pour n8n...
+    Politique de Confidentialité de [Nom de votre Application]
+
+1. Collecte des informations Nous collectons les informations suivantes lorsque vous utilisez notre application : [ex: nom, adresse e-mail, données de profil public via Facebook].
+
+2. Utilisation des données Les informations que nous recueillons servent à :
+
+Fournir et maintenir le service.
+
+Personnaliser votre expérience utilisateur.
+
+
+3. Protection des données Nous mettons en œuvre des mesures de sécurité pour préserver la sécurité de vos informations personnelles. Nous ne vendons, n'échangeons, ni ne transférons vos informations identifiables à des tiers.
+
+4. Droits de l'utilisateur Conformément au RGPD, vous disposez d'un droit d'accès, de rectification et de suppression de vos données. Pour toute demande, contactez-nous à : [Votre adresse e-mail de contact].
+
+5. Consentement En utilisant notre application, vous consentez à notre politique de confidentialité.
 </body>
 </html>
